--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a  class="image avatar"><img src="images/profile-pic_01_Less than 30 KB.jpg" alt="" style="width: 120px; height: 120px;" /></a>
-					<h1><strong>I am Yash Ankleshwariya</strong> <br />Senior Financial Analyst<br />
-					With 4 years of Strong Financial Domain Exprience<br />
+					<h1><strong>I'm Yash Ankleshwariya </strong> <br />Senior Financial Analyst with year's <br />
+					Of Finance Domain Exprience <br /><br />
+					 I’m currently working on Machine Learning, Tableau, Power Bi<br /> Python, SQL </strong>				
 					</a></h1>
 				</div>
 			</header>
@@ -29,9 +30,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Data-Driven Senior Financial Analyst Specializing in Process Optimization and Process Efficiency. <br /></h2>
+							<h2>Data-Driven Senior Financial Analyst  <br /></h2>
 						</header>
 						<p>Finance-focused data analyst with a data-driven approach and a strong background in statistics, programming, and machine learning. Proficient in utilizing Python, R, and SQL to extract actionable insights from extensive and intricate financial datasets.</p>
+						<p>  Completed Integrated Business Analyst Course from IIM Indore. May-2023</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/yash-ankleshwariya/" class="button">Learn More</a></li>
 						</ul>
@@ -41,14 +43,6 @@
 					<section id="two">
 						<h2>Projects</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/Covid.JPG" class="image fit thumb"><img src="images/Covid.JPG" alt="" /></a>
-								<h3>In this project we use SQL Server to explore global COVID 19 data.</h3>
-								<ul class="actions" style="display: flex; justify-content: center;">
-									<li style="text-align: center"><a href="https://github.com/YashAnkleshwariya/SQL_Projects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql.sql" class="button">VIEW project</a></li>
-								</ul>
-								<p></p>
-							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/002.JPG" class="image fit thumb"><img src="images/Sentiment_Analysis_app.JPG" alt="" /></a>
 								<h3>Strealmlit application for Sentiment Analysis in Positive , Negative and Netural Sentiment.</h3>
@@ -84,6 +78,14 @@
 								<ul class="actions" style="display: flex; justify-content: center;">
 									<li style="text-align: center"><a href="https://github.com/YashAnkleshwariya/Machine_Leaning_Projects/tree/main/Insurance_Cross%20Selling%20Predection" class="button">VIEW PROJECT</a></li>
 								</ul><p></p>
+							</article>
+								<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Covid.JPG" class="image fit thumb"><img src="images/Covid.JPG" alt="" /></a>
+								<h3>In this project we use SQL Server to explore global COVID 19 data.</h3>
+								<ul class="actions" style="display: flex; justify-content: center;">
+									<li style="text-align: center"><a href="https://github.com/YashAnkleshwariya/SQL_Projects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql.sql" class="button">VIEW project</a></li>
+								</ul>
+								<p></p>
 							</article>
 						</div>
 						<ul class="actions">
