--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Yash Ankleshwariya Portfolio</title>
 		<meta charset="utf-8" />
-		<meta property="og:image" content="image/thumbs/PP.jpg" />
+		<meta class="image avatar"><img src="images/profile-pic_01_Less than 30 KB.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
